Actions
Bug #11914
closedloader: zfs.c is missing malloc checks, fix it
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
A bit of code cleanup. Also drop FreeBSD code to build BE list.
Testing done: build/install/boot.
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 777db87909d75c1cbc953f988d5d78a781d1fd39
commit 777db87909d75c1cbc953f988d5d78a781d1fd39 Author: Toomas Soome <tsoome@me.com> Date: 2019-11-05T16:09:13.000Z 11914 loader: zfs.c is missing malloc checks, fix it Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Matthias Scheler <matthias.scheler@wdc.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions