11914 loader: zfs.c is missing malloc checks, fix it Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Matthias Scheler <matthias.scheler@wdc.com> Approved by: Dan McDonald <danmcd@joyent.com>